test/networkflow-scale-tests/fortio-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio-server-service
spec:
  selector:
    svc: fortio-server-service
  ports:
  - port: 8080
    targetPort: 8080
