test/networkflow-scale-tests/fortio-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-server
  labels:
    app: fortio
    role: server
    svc: fortio-server-service
spec:
  replicas: 5
  selector:
    matchLabels:
      name: fortio-server
      app: fortio
      role: server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 20%
      maxSurge: 20%
  template:
    metadata:
      labels:
        name: fortio-server
        app: fortio
        role: server
        svc: fortio-server-service
    spec:
      nodeSelector:
        workload: fortio
      containers:
      - name: fortio
        image: fortio/fortio:latest
        imagePullPolicy: IfNotPresent
        args: ["server", "-http-port", "0.0.0.0:8080"]
        ports:
          - containerPort: 8078 # tcp echo
          - containerPort: 8079 # grpc echo
          - containerPort: 8080 # main serving port
          - containerPort: 8081 # redirection to https port
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
