test/networkflow-scale-tests/networkflow-all-traffic.yaml
apiVersion: acn.azure.com/v1alpha1
kind: RetinaNetworkFlowLog
metadata:
  name: all-traffic
spec:
  includefilters:
    - name: net-traffic
      from:
        namespacedPod: ["lwtest/"]
      to:
        namespacedPod: ["lwtest/"]
      protocol: [tcp, udp, dns]
      
    - name: dns-traffic
      from:
        namespacedPod: ["lwtest/"]
      to:
        namespacedPod: ["kube-system/coredns-"]
      protocol: [dns]
